@@ -156,22 +156,27 @@ OIDCMetadataDir /var/cache/apache2/mod_oidc/metadata
 #OIDCCacheType [file|memcache|shm]
 
 # (Optional)
+# When using OIDCCacheType "file":
 # Directory that holds cache files for session state and validated OAuth 2.0 tokens
 # (must be writable for the Apache process/user)
 # When not specified a system defined temporary directory (/tmp) will be used.
 #OIDCCacheDir /var/cache/apache2/mod_oidc/cache
 
 # (Optional)
-# Required when using OIDCCacheType "memcache": specifies the memcache servers
-# used for caching (space separated list of <hostname>[:<port>] tuples)
+# When using OIDCCacheType "file":
+# Cache file clean interval in seconds (only triggered on writes).
+# When not specified a default of 60 seconds is used.
+# OIDCCacheFileCleanInterval <seconds>
+
+# (Optional)
+# Required when using OIDCCacheType "memcache":
+# Specifies the memcache servers used for caching (space separated list of <hostname>[:<port>] tuples)
 #OIDCMemCacheServers (<hostname>[:<port>])+
 
 # (Optional)
-# When using OIDCCacheType "shm": specifies the maximum number of entries that can
-# be cached.
-# NB: THIS IS A GLOBAL SETTING THAT SHOULD BE SPECIFIED ONLY ONCE ACROSS ALL VHOSTS
-#     IF SPECIFIED MULTIPLE TIMES, THE LAST VHOST PROCESSED WILL OVERRIDE
-# When not specified, a default of 500 entries will be used.
+# When using OIDCCacheType "shm":
+# Specifies the maximum number of name/value pair entries that can be cached.
+# When not specified, a default of 500 entries is used.
 # OIDCCacheShmMax <number>
 
 ########################################################################################
